--- a/pages/Introduction.module.scss
+++ b/pages/Introduction.module.scss
@@ -21,8 +21,23 @@
     white-space: pre;
     overflow: hidden;
     vertical-align: bottom;
-    animation: typing 0.5s steps(1) forwards var(--delay);
+    animation: typing 0.3s steps(1) forwards var(--delay);
   }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .fadeIn {
+    opacity: 0;
+    animation: fadeIn 1.5s forwards var(--fade-in-delay);
+  }
+
 }
 
 .aboutMe {
