--- a/pages/skills.module.scss
+++ b/pages/skills.module.scss
@@ -3,9 +3,14 @@
 .information {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+
+    .skillContainer{
+      padding-left: 40px;
+      margin-top: 50px;
   
     .Title {
       margin-bottom: 8px;
+      padding-right: 20px;
     }
   
     .pRel {
@@ -56,20 +61,23 @@
 }
 
 .verticalLine {
-    position: absolute;
-    left: 25%;
-    background: $primary-purple;
-    width: 2px;
-    height: 100%;
-  }
+  position: absolute;
+  left: 25%;
+  background: $primary-purple;
+  width: 2px;
+  height: 100%;
+}
 
-  .verticalLine2 {
-    position: absolute;
-    right: 40%;
-    background: $primary-purple;
-    width: 2px;
-    height: 100%;
-  }
+.verticalLine2 {
+  position: absolute;
+  right: 40%;
+  background: $primary-purple;
+  width: 2px;
+  height: 100%;
+}
+
+}
+
 
 .information.visible {
     opacity: 1;
